--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="F:\Photographs\Aniruddha\PicsArt_09-25-03.57.34.jpg" class="img-medium"/>
+            <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
