[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,30 @@
 <html>
+    <head>
+        <title>
+            Article One | Aniruddha Shinde
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+       <hr>
+       <h3>
+           Article One
+       </h3>
+       <div>
+           Sept 20,2016
+       </div>
+       <div>
+           <p>
+               This is the information about my first webapp.This is the information about my first webapp.This is the information about my first webapp.This is the information about my first webapp.This is the information about my first webapp.This is the information about my first webapp.This is the information about my first webapp.
+           </p>
+            <p>
+               This is the information about my first webapp.This is the information about my first webapp.This is the information about my first webapp.This is the information about my first webapp.This is the information about my first webapp.This is the information about my first webapp.This is the information about my first webapp.
+           </p>
+            <p>
+               This is the information about my first webapp.This is the information about my first webapp.This is the information about my first webapp.This is the information about my first webapp.This is the information about my first webapp.This is the information about my first webapp.This is the information about my first webapp.
+           </p>
+       </div>
+    </body>
 </html>
