--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -20,6 +20,6 @@
            <p>
                This is the information about my Three webapp.
            </p>
-         
+        </div>
     </body>
 </html>
