[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,9 +3,18 @@
         <title>
             Article One | Aniruddha Shinde
         </title>
-        <meta name="viewport" content="width=device-width ,initial scale=1" /> 
+        <meta name="viewport" content="width=device-width ,initial scale=1" />
+        <style>
+            .container{
+                max-width:500px;
+                margin:0 auto;
+                color:blue;
+                font-family:sans-sherif;
+            }
+        </style>
     </head>
     <body>
+        <div class="container">
         <div>
             <a href="/">Home</a>
         </div>
@@ -26,6 +35,7 @@
             <p>
                This is the information about my first webapp.This is the information about my first webapp.This is the information about my first webapp.This is the information about my first webapp.This is the information about my first webapp.This is the information about my first webapp.This is the information about my first webapp.
            </p>
+       </div>
        </div>
     </body>
 </html>
