--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -8,7 +8,7 @@
             .container{
                 max-width:500px;
                 margin:0 auto;
-                color:blue;
+                color:grey;
                 font-family:sans-sherif;
             }
         </style>
